# separadamente

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
debian/: changelog  changelog.in  control  copyright  kodi-pvr-enigma2-stb.install  rules
pvr.enigma2.stb/: addon.xml  addon.xml.in
pvr.enigma2.stb/resources/: settings.xml
pvr.enigma2.stb/resources/language/English/: strings.po
pvr.enigma2.stb/resources/language/resource.language.en_gb/: strings.po
src/: E2STBBackendData.cpp  E2STBBackendData.h  E2STBChannels.cpp  E2STBChannels.h  E2STBConnection.cpp  E2STBConnection.h  E2STBData.cpp  E2STBData.h  E2STBRecordings.cpp  E2STBRecordings.h  E2STBTimeshift.cpp  E2STBTimeshift.h  E2STBUtils.cpp  E2STBUtils.h  E2STBVersion.h.in  E2STBXMLUtils.cpp  E2STBXMLUtils.h  client.cpp  client.h  compat.h
